less than three projects toggle